fix problem with overflow in mobile version & add active effect to favorites and basket in menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,6 @@
 html {
   position: relative;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 
   &:has(.hidden-overflow) {
     overflow: hidden;
