--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -154,27 +154,27 @@
       color: var(--dark-gray-color);
     }
   }
+}
 
-  &__products-counter {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-100%);
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
-    border: 1px solid var(--white-color);
-    background-color: var(--purple-color);
+.products-counter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-100%);
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid var(--white-color);
+  background-color: var(--purple-color);
 
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-family: var(--semi-bold-font-family);
-    font-size: 9px;
-    font-weight: 700;
-    line-height: 12px;
-    color: var(--white-color);
-  }
+  font-family: var(--semi-bold-font-family);
+  font-size: 9px;
+  font-weight: 700;
+  line-height: 12px;
+  color: var(--white-color);
 }
