--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -48,6 +48,8 @@
     display: flex;
 
     &-link {
+      position: relative;
+
       width: 50%;
       height: 64px;
       display: flex;
@@ -59,6 +61,17 @@
       & img {
         width: 16px;
         height: 16px;
+      }
+
+      &--active {
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: 3px;
+          background-color: var(--dark-gray-color);
+        }
       }
     }
   }
